--- a/css/puls4.css
+++ b/css/puls4.css
@@ -1,33 +1,15 @@
 @font-face{font-family:'iconitos';src:url("../fonts/icomoon.eot");src:url("../fonts/icomoon.eot?#iefix") format('embedded-opentype'),url("../fonts/icomoon.ttf") format('truetype'),url("../fonts/icomoon.woff") format('woff'),url("../fonts/icomoon.svg#icomoon") format('svg');font-weight:normal;font-style:normal}
 a{color:#dd4f24}
 body{background:#e8e8e8;color:#444;font-family:Arial;font-size:16px}
-<<<<<<< HEAD
-header{background:#444;color:#fff;overflow:hidden;padding:.5em;position:relative;}
-=======
 footer{background:#dd4f24;color:rgba(255,255,255,0.5);padding:1em 0;text-align:center;width:100%;}
 footer h3{font-size:14px;font-weight:normal;}
 footer h3 strong{display:block}
 footer h3 .mejor:before,footer h3 .mejor:after{content:" - "}
 header{background:#444;box-shadow:0 5px 0 rgba(0,0,0,0.2);color:#fff;overflow:hidden;padding:.5em;position:relative;z-index:1;}
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 header .logo{border-right:1px solid #22bce0;float:left;width:60px;}
 header .logo img{width:52px}
 header .titular{margin:0 60px 0 70px;}
 header .titular .filtro{color:#22bce0;font-size:14px;font-style:italic;font-weight:bold;text-decoration:none}
-<<<<<<< HEAD
-header .titular .publicar{background:#dd4f24;color:#fff;float:right;font-style:italic;margin:-5px 1em 0 0;padding:.2em .5em;text-decoration:none;text-shadow:1px 1px 0 #000}
-header .titular .titulo{font-size:18px;font-weight:normal;margin:0;padding:0}
-header .usuario{position:absolute;right:10px;top:10px;}
-header .usuario .avatar{margin:0 1em 0 0;position:relative;z-index:2;}
-header .usuario .avatar img{width:50px;border-radius:50%}
-header .usuario .flechita{background:#dd4f24;color:#fff;display:block;padding:3px;position:absolute;right:0;top:15px;text-align:right;width:50%;z-index:0}
-nav{background:#22bce0;border-left:15px;}
-nav:before{border-left:20px solid #f00;content:""}
-nav .menu{height:40px;line-height:40px;margin:0;padding:0;overflow-x:auto;white-space:nowrap;}
-nav .menu li{display:inline-block;}
-nav .menu li a{color:#fff;display:block;margin:0 .5em;padding:0 .2em;text-decoration:none}
-nav .menu li a:after{content:" - "}
-=======
 header .titular .publicar{background:#dd4f24;color:#fff;float:right;font-style:italic;margin:-5px 1em 0 0;padding:.2em .5em;text-decoration:none;text-shadow:1px 1px 0 #000;}
 header .titular .publicar:before{display:inline-block;content:"\e600";font-family:"iconitos";margin:0 3px 0 0}
 header .titular .titulo{font-size:18px;font-weight:normal;margin:0;padding:0}
@@ -45,7 +27,8 @@ nav .menu li a{color:#fff;display:block;margin:0 .5em;padding:0 .2em;text-decora
 .posts .post{background:#fff;border-radius:0 0 .5em .5em;box-shadow:2px 2px 10px rgba(0,0,0,0.5);color:#7a7a7a;margin-bottom:1em;}
 .posts .post .acciones{border-top:3px solid #22bce0;padding:.5em;overflow:hidden;}
 .posts .post .acciones .datos{float:right;}
-.posts .post .acciones .datos .comentarios{background:#444;border-radius:3px;color:#fff;margin:0 1em 0 0;padding:2px 5px;text-decoration:none}
+.posts .post .acciones .datos .comentarios{background:#444;border-radius:3px 3px 0 3px;color:#fff;margin:0 1em 0 0;padding:2px 5px;text-decoration:none}
+.posts .post .acciones .datos:after{border-right:5px solid #444;border-bottom:5px solid #fff;margin-left:27px;float:left;display:inline-block;content:""}
 .posts .post .acciones .datos .estrellita{text-decoration:none;}
 .posts .post .acciones .datos .estrellita:after{font-family:"iconitos";color:#e0d561;content:"\e601"}
 .posts .post .acciones .votos{float:left;}
@@ -67,4 +50,3 @@ header .titular .publicar:before{left:0;font-size:2.5em;position:absolute;top:-1
 .posts .post{display:inline-block;width:48%;vertical-align:top;}
 .posts .post:nth-child(odd){margin-right:2%}
 }
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
