--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -1,8 +1,5 @@
 azul = #22BCE0
 gris_oscuro = #444
-<<<<<<< HEAD
-naranja = #DD4F24
-=======
 gris_texto = #7A7A7A
 naranja = #DD4F24
 
@@ -19,7 +16,6 @@ naranja = #DD4F24
 
 a
 	color naranja
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 
 body
 	background #E8E8E8
@@ -54,10 +50,7 @@ header
 	overflow hidden
 	padding 0.5em
 	position relative
-<<<<<<< HEAD
-=======
 	z-index 1
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 
 	.logo
 		border-right 1px solid azul
@@ -87,15 +80,12 @@ header
 			text-decoration none
 			text-shadow 1px 1px 0px black
 
-<<<<<<< HEAD
-=======
 			&:before 
 				display inline-block
 				content "\e600"
 				font-family "iconitos"
 				margin 0 3px 0 0
 
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 		.titulo
 			font-size 18px
 			font-weight normal
@@ -108,11 +98,7 @@ header
 		top 10px
 
 		.avatar
-<<<<<<< HEAD
-			margin 0 1em 0 0
-=======
 			margin 0 1.1em 0 0
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 			position relative
 			z-index 2
 
@@ -124,27 +110,11 @@ header
 			background naranja
 			color white
 			display block
-<<<<<<< HEAD
-			padding 3px
-=======
 			padding 2px
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 			position absolute
 			right 0
 			top 15px
 			text-align right
-<<<<<<< HEAD
-			width 50%
-			z-index 0
-
-nav
-	background azul
-	border-left 15px
-
-	&:before
-		border-left 20px solid red
-		content""
-=======
 			text-decoration none
 			width 50%
 			z-index 0
@@ -168,7 +138,6 @@ nav
 		left 0
 		position absolute
 		top 0
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 
 	.menu
 		height 40px
@@ -187,10 +156,6 @@ nav
 				margin 0 0.5em
 				padding 0 0.2em
 				text-decoration none
-<<<<<<< HEAD
-			    a:after
-					content " - "
-=======
 .posts
 	padding 0.5em
 
@@ -211,11 +176,20 @@ nav
 
 				.comentarios
 					background gris_oscuro
-					border-radius 3px
+					border-radius 3px 3px 0px 3px
 					color white
 					margin 0 1em 0 0
 					padding 2px 5px
 					text-decoration none
+				&:after
+					border-right 5px solid gris_oscuro
+					border-bottom 5px solid white
+					margin-left 27px
+					float left
+					display inline-block
+					content ""
+
+
 
 				.estrellita
 					text-decoration none
@@ -308,7 +282,6 @@ nav
 			&:nth-child(odd)
 				margin-right 2%
 			
->>>>>>> 310dab095b83b7ccdf666ce2aa7f602f2e04921d
 
 
 
